--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.5.6",
+    "uri-templates": "^0.2.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
