--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ngx-img-fallback": "^1.3.3",
     "rxjs": "^5.5.7",
     "uri-templates": "^0.2.0",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
