--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "rxjs": "^5.5.7",
     "uri-templates": "^0.2.0",
     "web-animations-js": "^2.3.1",
+    "xunk-calendar": "^1.4.2",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
