--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,21 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-        
-      # run tests!
-      - run: npm run lint
-      - run: npm run build
+
+      - run:
+          name: Lint
+          command: npm run lint
+
+      # Deploy
+      - run:
+          name: Setup Git
+          command: git config --global user.name "Xunk-Bot" && git config --global user.email "xunk@radialapps.com" && git config --global push.default matching
+      - run:
+          name: Clone Deployed
+          command: git clone git@github.com:go-xunk/iitb-app-deploy.git deploy
+      - run:
+          name: Build
+          command: npm run build
+      - run:
+          name: Deploy
+          command: cd deploy && rm -r * && cp -R ../dist/* ./ && date > BUILD_TIME && git add -A && git commit -m "Automated Build" && git push && cd ..
