--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "@angular/platform-browser-dynamic": "^5.2.9",
     "@angular/router": "^5.2.9",
     "@angular/service-worker": "^5.2.9",
+    "@fortawesome/fontawesome-free-webfonts": "^1.0.4",
+    "@ngx-share/button": "^5.1.0",
+    "@ngx-share/core": "^5.1.0",
     "core-js": "^2.5.3",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ng-sidebarjs": "^4.0.0",
     "ngx-img-fallback": "^1.3.3",
