Fix Continuous Deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,14 +39,8 @@ jobs:
 
       # Deploy
       - run:
-          name: Setup Git
-          command: git config --global user.name "Xunk-Bot" && git config --global user.email "xunk@radialapps.com" && git config --global push.default matching
-      - run:
-          name: Clone Deployed
-          command: git clone git@github.com:go-xunk/iitb-app-deploy.git deploy
-      - run:
           name: Build
           command: npm run build
       - run:
           name: Deploy
-          command: cd deploy && rm -r * && cp -R ../dist/* ./ && date > BUILD_TIME && git add -A && git commit -m "Automated Build" && git push && cd ..
+          command: chmod 777 deploy.sh && ./deploy.sh
