--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "hammerjs": "^2.0.8",
     "ng-sidebarjs": "^4.0.0",
     "ngx-img-fallback": "^1.3.3",
+    "ngx-markdown": "^1.5.2",
     "rxjs": "^5.5.8",
     "uri-templates": "^0.2.0",
     "web-animations-js": "^2.3.1",
