--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "IITB-App",
-    "short_name": "IITB-App",
+    "name": "InstiApp",
+    "short_name": "InstiApp",
     "start_url": "/feed",
     "display": "standalone",
     "theme_color": "#4DB6AC",
