--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ng": "ng",
     "start": "ng serve --hmr --proxy-config proxy.conf.json",
     "build": "ng build --prod",
+    "build-deploy": "ng build --prod --env=deploy",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
