--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ng-sidebarjs": "^4.0.0",
     "ngx-img-fallback": "^1.3.3",
     "ngx-markdown": "^1.5.2",
+    "rss-parser": "^3.1.2",
     "rxjs": "^5.5.8",
     "uri-templates": "^0.2.0",
     "web-animations-js": "^2.3.1",
