--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "ng serve --hmr --proxy-config proxy.conf.json",
     "build": "ng build --prod",
     "build-deploy": "ng build --prod --env=deploy",
+    "build-deploy2": "ng build --prod --env=deploy2 --bh /instiapp/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
