--- a/src/ngsw-config.json
+++ b/src/ngsw-config.json
@@ -1,17 +1,17 @@
 {
-  "index": "/index.html",
+  "index": "index.html",
   "assetGroups": [{
     "name": "app",
     "installMode": "prefetch",
     "resources": {
       "files": [
-        "/favicon.ico",
-        "/index.html"
+        "favicon.ico",
+        "index.html"
       ],
       "versionedFiles": [
-        "/*.bundle.css",
-        "/*.bundle.js",
-        "/*.chunk.js"
+        "*.bundle.css",
+        "*.bundle.js",
+        "*.chunk.js"
       ]
     }
   }, {
@@ -20,7 +20,7 @@
     "updateMode": "prefetch",
     "resources": {
       "files": [
-        "/assets/**"
+        "assets/**"
       ],
       "urls": [
         "https://fonts.googleapis.com/**"
@@ -30,7 +30,7 @@
   "dataGroups": [
     {
       "name": "backend-api",
-      "urls": ["/api/**"],
+      "urls": ["api/**"],
       "cacheConfig": {
         "strategy": "freshness",
         "maxSize": 20,
