--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,11 @@
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 #
 version: 2
+
+general:
+  branches:
+    - master
+
 jobs:
   build:
     docker:
@@ -32,10 +37,6 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-
-      - run:
-          name: Lint
-          command: npm run lint
 
       # Deploy
       - run:
