--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,12 +4,12 @@
 #
 version: 2
 
-general:
-  branches:
-    - master
-
 jobs:
   build:
+    branches:
+      only:
+        - master
+
     docker:
       # specify the version you desire here
       - image: circleci/node:8.9.4-stretch-browsers
