--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,13 @@
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 #
 version: 2
+
 jobs:
   build:
+    branches:
+      only:
+        - master
+
     docker:
       # specify the version you desire here
       - image: circleci/node:8.9.4-stretch-browsers
@@ -32,10 +37,6 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-
-      - run:
-          name: Lint
-          command: npm run lint
 
       # Deploy
       - run:
