--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "@angular/platform-browser-dynamic": "^5.2.9",
     "@angular/router": "^5.2.9",
     "@angular/service-worker": "^5.2.9",
+    "@fortawesome/angular-fontawesome": "0.1.0-8",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.5",
-    "@ngx-share/button": "^5.2.0",
-    "@ngx-share/core": "^5.2.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-10",
+    "@fortawesome/free-brands-svg-icons": "^5.1.0-4",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-4",
+    "@ngx-share/button": "^5.3.1",
+    "@ngx-share/core": "^5.3.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
@@ -38,11 +42,11 @@
     "rxjs": "^5.5.8",
     "uri-templates": "^0.2.0",
     "web-animations-js": "^2.3.1",
-    "xunk-calendar": "^1.6.0",
-    "zone.js": "^0.8.25"
+    "xunk-calendar": "^1.6.3",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.3",
+    "@angular/cli": "^1.7.4",
     "@angular/compiler-cli": "^5.2.9",
     "@angular/language-service": "^5.2.9",
     "@angularclass/hmr": "^2.1.3",
@@ -57,7 +61,7 @@
     "karma-coverage-istanbul-reporter": "^1.4.2",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^1.0.0",
-    "protractor": "~5.3.0",
+    "protractor": "~5.3.1",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.8.1"
