--- a/package.json
+++ b/package.json
@@ -14,46 +14,48 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.9",
-    "@angular/cdk": "^5.2.4",
-    "@angular/common": "^5.2.9",
-    "@angular/compiler": "^5.2.9",
-    "@angular/core": "^5.2.9",
-    "@angular/forms": "^5.2.9",
-    "@angular/http": "^5.2.9",
-    "@angular/material": "^5.2.4",
-    "@angular/platform-browser": "^5.2.9",
-    "@angular/platform-browser-dynamic": "^5.2.9",
-    "@angular/router": "^5.2.9",
-    "@angular/service-worker": "^5.2.9",
-    "@fortawesome/angular-fontawesome": "0.1.0-8",
-    "@fortawesome/fontawesome-free-webfonts": "^1.0.5",
-    "@fortawesome/fontawesome-svg-core": "^1.2.0-10",
-    "@fortawesome/free-brands-svg-icons": "^5.1.0-4",
-    "@fortawesome/free-solid-svg-icons": "^5.1.0-4",
+    "@angular/animations": "^6.0.1",
+    "@angular/cdk": "^6.0.1",
+    "@angular/common": "^6.0.1",
+    "@angular/compiler": "^6.0.1",
+    "@angular/core": "^6.0.1",
+    "@angular/forms": "^6.0.1",
+    "@angular/http": "^6.0.1",
+    "@angular/material": "^6.0.1",
+    "@angular/platform-browser": "^6.0.1",
+    "@angular/platform-browser-dynamic": "^6.0.1",
+    "@angular/router": "^6.0.1",
+    "@angular/service-worker": "^6.0.1",
+    "@fortawesome/angular-fontawesome": "0.1.0-9",
+    "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
+    "@fortawesome/fontawesome-svg-core": "^1.2.0-11",
+    "@fortawesome/free-brands-svg-icons": "^5.1.0-8",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-8",
     "@ngx-share/button": "^5.3.1",
     "@ngx-share/core": "^5.3.1",
-    "core-js": "^2.5.4",
+    "core-js": "^2.5.6",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ng-sidebarjs": "^4.0.0",
     "ngx-img-fallback": "^1.3.3",
-    "ngx-markdown": "^1.5.2",
-    "rxjs": "^5.5.8",
+    "ngx-markdown": "^1.6.0",
+    "rxjs": "^6.1.0",
+    "rxjs-compat": "^6.1.0",
     "uri-templates": "^0.2.0",
     "web-animations-js": "^2.3.1",
-    "xunk-calendar": "^1.6.5",
+    "xunk-calendar": "^1.6.8",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.4",
-    "@angular/compiler-cli": "^5.2.9",
-    "@angular/language-service": "^5.2.9",
+    "@angular/cli": "^6.0.1",
+    "@angular/compiler-cli": "^6.0.1",
+    "@angular/language-service": "^6.0.1",
     "@angularclass/hmr": "^2.1.3",
-    "@types/node": "~9.6.2",
-    "codelyzer": "^4.2.1",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.8.1"
+    "@types/node": "~10.0.8",
+    "codelyzer": "^4.3.0",
+    "ts-node": "~6.0.3",
+    "tslint": "~5.10.0",
+    "typescript": "2.7.2",
+    "@angular-devkit/build-angular": "~0.6.1"
   }
 }
