--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "iitb-app",
   "version": "0.0.0",
-  "license": "MIT",
+  "license": "MPL-2.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --hmr --proxy-config proxy.conf.json",
