--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "core-js": "^2.5.6",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "ngx-flyout": "^1.0.0",
     "ngx-img-fallback": "^1.3.3",
     "ngx-markdown": "^1.6.0",
     "rxjs": "^6.2.0",
