--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^6.0.3",
-    "@angular/cdk": "^6.1.0",
+    "@angular/cdk": "^6.2.0",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
-    "@angular/material": "^6.1.0",
+    "@angular/material": "^6.2.0",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
@@ -29,33 +29,33 @@
     "@fortawesome/angular-fontawesome": "0.1.0-10",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "@fortawesome/fontawesome-svg-core": "^1.2.0-11",
-    "@fortawesome/free-brands-svg-icons": "^5.1.0-8",
-    "@fortawesome/free-solid-svg-icons": "^5.1.0-8",
+    "@fortawesome/free-brands-svg-icons": "^5.1.0-11",
+    "@fortawesome/free-solid-svg-icons": "^5.1.0-11",
     "@ngx-share/button": "^5.3.1",
     "@ngx-share/core": "^5.3.1",
-    "core-js": "^2.5.6",
+    "core-js": "^2.5.7",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ngx-flyout": "^1.0.0",
     "ngx-img-fallback": "^1.3.3",
-    "ngx-markdown": "^1.6.0",
+    "ngx-markdown": "^6.0.1",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.2.0",
     "uri-templates": "^0.2.0",
     "web-animations-js": "^2.3.1",
-    "xunk-calendar": "^1.6.8",
+    "xunk-calendar": "^1.8.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^6.0.5",
+    "@angular/cli": "^6.0.7",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
     "@angularclass/hmr": "^2.1.3",
-    "@types/node": "~10.1.2",
+    "@types/node": "~10.3.0",
     "codelyzer": "^4.3.0",
     "ts-node": "~6.0.5",
     "tslint": "~5.10.0",
     "typescript": "2.7.2",
-    "@angular-devkit/build-angular": "~0.6.5"
+    "@angular-devkit/build-angular": "~0.7.0-beta.1"
   }
 }
