--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ngx-share/core": "^6.0.0",
     "core-js": "^2.5.7",
     "font-awesome": "^4.7.0",
+    "fuse.js": "^3.2.1",
     "hammerjs": "^2.0.8",
     "ngx-flyout": "^1.0.0",
     "ngx-img-fallback": "^1.3.3",
