--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -1,15 +1,14 @@
 {
-  "index": "index.html",
+  "index": "/index.html",
   "assetGroups": [{
     "name": "app",
     "installMode": "prefetch",
     "resources": {
       "files": [
-        "favicon.ico",
-        "index.html",
-        "*.bundle.css",
-        "*.bundle.js",
-        "*.chunk.js"
+        "/favicon.ico",
+        "/index.html",
+        "/*.css",
+        "/*.js"
       ]
     }
   }, {
@@ -18,7 +17,7 @@
     "updateMode": "prefetch",
     "resources": {
       "files": [
-        "assets/**"
+        "/assets/**"
       ],
       "urls": [
         "https://fonts.googleapis.com/**"
