--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/material": "^6.2.1",
     "@angular/platform-browser": "^6.0.5",
     "@angular/platform-browser-dynamic": "^6.0.5",
+    "@angular/pwa": "^0.6.8",
     "@angular/router": "^6.0.5",
     "@angular/service-worker": "^6.0.5",
     "@fortawesome/angular-fontawesome": "0.1.0-10",
