--- a/package.json
+++ b/package.json
@@ -49,15 +49,16 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.7.0-beta.1",
     "@angular/cli": "^6.0.8",
     "@angular/compiler-cli": "^6.0.6",
     "@angular/language-service": "^6.0.6",
     "@angularclass/hmr": "^2.1.3",
     "@types/node": "~10.3.4",
+    "@types/ol": "^4.6.2",
     "codelyzer": "^4.3.0",
     "ts-node": "~6.1.2",
     "tslint": "~5.10.0",
-    "typescript": "2.7.2",
-    "@angular-devkit/build-angular": "~0.7.0-beta.1"
+    "typescript": "2.7.2"
   }
 }
