--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,6 +4,7 @@
     "start_url": "feed",
     "display": "standalone",
     "theme_color": "#673AB7",
+    "background_color": "#ffffff",
     "orientation": "portrait",
 
     "icons": [
@@ -42,6 +43,11 @@
          "sizes": "192x192",
          "type": "image/png",
          "density": "4.0"
+        },
+        {
+         "src": "assets/logo.png",
+         "sizes": "512x512",
+         "type": "image/png"
         }
     ]
 }
