--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ngx-flyout": "^1.0.0",
     "ngx-img-fallback": "^1.3.3",
     "ngx-markdown": "^6.1.0",
+    "ngx-scrollbar": "^2.1.0",
     "ol": "^4.6.5",
     "rxjs": "^6.2.1",
     "uri-templates": "^0.2.0",
