--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "font-awesome": "^4.7.0",
     "fuse.js": "^3.2.1",
     "hammerjs": "^2.0.8",
+    "moment": "^2.22.2",
     "ngx-flyout": "^1.0.0",
     "ngx-img-fallback": "^1.3.3",
     "ngx-markdown": "^6.1.0",
