--- a/package.json
+++ b/package.json
@@ -14,24 +14,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.7",
-    "@angular/cdk": "^6.3.2",
-    "@angular/common": "^6.0.7",
-    "@angular/compiler": "^6.0.7",
-    "@angular/core": "^6.0.7",
-    "@angular/forms": "^6.0.7",
-    "@angular/http": "^6.0.7",
-    "@angular/material": "^6.3.2",
-    "@angular/platform-browser": "^6.0.7",
-    "@angular/platform-browser-dynamic": "^6.0.7",
-    "@angular/pwa": "^0.6.8",
-    "@angular/router": "^6.0.7",
-    "@angular/service-worker": "^6.0.7",
+    "@angular/animations": "^6.1.0",
+    "@angular/cdk": "^6.4.1",
+    "@angular/common": "^6.1.0",
+    "@angular/compiler": "^6.1.0",
+    "@angular/core": "^6.1.0",
+    "@angular/forms": "^6.1.0",
+    "@angular/http": "^6.1.0",
+    "@angular/material": "^6.4.1",
+    "@angular/platform-browser": "^6.1.0",
+    "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/pwa": "^0.7.1",
+    "@angular/router": "^6.1.0",
+    "@angular/service-worker": "^6.1.0",
     "@fortawesome/angular-fontawesome": "0.1.0-10",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
-    "@fortawesome/fontawesome-svg-core": "^1.2.0",
-    "@fortawesome/free-brands-svg-icons": "^5.1.0",
-    "@fortawesome/free-solid-svg-icons": "^5.1.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.2",
+    "@fortawesome/free-brands-svg-icons": "^5.2.0",
+    "@fortawesome/free-solid-svg-icons": "^5.2.0",
     "@ngx-share/button": "^6.0.1",
     "@ngx-share/core": "^6.0.1",
     "core-js": "^2.5.7",
@@ -43,23 +43,23 @@
     "ngx-flyout": "^1.0.0",
     "ngx-img-fallback": "^1.3.3",
     "ngx-markdown": "^6.1.0",
-    "ol": "4.6.5",
-    "rxjs": "^6.2.1",
+    "ol": "5.1.3",
+    "rxjs": "^6.2.2",
     "uri-templates": "^0.2.0",
     "web-animations-js": "^2.3.1",
     "xunk-calendar": "^2.0.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0-beta.1",
-    "@angular/cli": "^6.0.8",
-    "@angular/compiler-cli": "^6.0.7",
-    "@angular/language-service": "^6.0.7",
+    "@angular-devkit/build-angular": "~0.7.1",
+    "@angular/cli": "^6.1.1",
+    "@angular/compiler-cli": "^6.1.0",
+    "@angular/language-service": "^6.1.0",
     "@angularclass/hmr": "^2.1.3",
-    "@types/node": "~10.5.2",
+    "@types/node": "~10.5.4",
     "codelyzer": "^4.4.2",
     "ts-node": "~7.0.0",
-    "tslint": "~5.10.0",
-    "typescript": "2.7.2"
+    "tslint": "~5.11.0",
+    "typescript": "2.9.2"
   }
 }
