--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "iitb-app",
-  "version": "0.0.0",
+  "name": "instiapp",
+  "version": "1.0.0",
   "license": "MPL-2.0",
   "scripts": {
     "start": "ng serve --hmr --proxy-config proxy.conf.json --host 0.0.0.0",
