--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngx-share/button": "^6.0.1",
     "@ngx-share/core": "^6.0.1",
     "core-js": "^2.5.7",
+    "css-vars-ponyfill": "^1.9.0",
     "font-awesome": "^4.7.0",
     "fuse.js": "^3.2.1",
     "hammerjs": "^2.0.8",
