--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "codelyzer": "^4.4.4",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
+    "tslint-angular": "^1.1.2",
     "typescript": "2.9.2"
   }
 }
