--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "fuse.js": "^3.3.0",
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
-    "moment": "^2.22.2",
+    "moment": "^2.24.0",
     "ngx-flyout": "^1.0.0",
     "ngx-img-fallback": "^1.3.3",
     "ngx-markdown": "^7.0.0",
@@ -46,7 +46,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.2",
+    "@angular-devkit/build-angular": "^0.13.0",
     "@angular/cli": "^7.0.2",
     "@angular/compiler-cli": "^7.0.0",
     "@angular/language-service": "^7.0.0",
