--- a/package.json
+++ b/package.json
@@ -9,53 +9,53 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.3",
-    "@angular/cdk": "^7.1.1",
-    "@angular/common": "^7.1.3",
-    "@angular/compiler": "^7.1.3",
-    "@angular/core": "^7.1.3",
-    "@angular/forms": "^7.1.3",
-    "@angular/http": "^7.1.3",
-    "@angular/material": "^7.1.1",
-    "@angular/platform-browser": "^7.1.3",
-    "@angular/platform-browser-dynamic": "^7.1.3",
-    "@angular/pwa": "^0.11.2",
-    "@angular/router": "^7.1.3",
-    "@angular/service-worker": "^7.1.3",
+    "@angular/animations": "^7.2.4",
+    "@angular/cdk": "^7.3.1",
+    "@angular/common": "^7.2.4",
+    "@angular/compiler": "^7.2.4",
+    "@angular/core": "^7.2.4",
+    "@angular/forms": "^7.2.4",
+    "@angular/http": "^7.2.4",
+    "@angular/material": "^7.3.1",
+    "@angular/platform-browser": "^7.2.4",
+    "@angular/platform-browser-dynamic": "^7.2.4",
+    "@angular/pwa": "^0.13.0",
+    "@angular/router": "^7.2.4",
+    "@angular/service-worker": "^7.2.4",
     "@fortawesome/angular-fontawesome": "0.3.0",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
-    "@fortawesome/fontawesome-svg-core": "^1.2.9",
-    "@fortawesome/free-brands-svg-icons": "^5.6.0",
-    "@fortawesome/free-solid-svg-icons": "^5.6.0",
-    "@ngx-share/button": "^7.1.0-beta.1",
-    "@ngx-share/core": "^7.1.0-beta.1",
-    "core-js": "^2.6.0",
-    "css-vars-ponyfill": "^1.15.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.14",
+    "@fortawesome/free-brands-svg-icons": "^5.7.1",
+    "@fortawesome/free-solid-svg-icons": "^5.7.1",
+    "@ngx-share/button": "^7.1.2",
+    "@ngx-share/core": "^7.1.2",
+    "core-js": "^2.6.3",
+    "css-vars-ponyfill": "^1.16.4",
     "font-awesome": "^4.7.0",
-    "fuse.js": "^3.3.0",
+    "fuse.js": "^3.3.1",
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
-    "moment": "^2.22.2",
+    "moment": "^2.24.0",
     "ngx-flyout": "^1.0.0",
     "ngx-img-fallback": "^1.3.3",
-    "ngx-markdown": "^7.0.2",
+    "ngx-markdown": "^7.1.3",
     "ol": "5.3.0",
-    "rxjs": "^6.3.3",
+    "rxjs": "^6.4.0",
     "uri-templates": "^0.2.0",
     "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.2",
-    "@angular/cli": "^7.1.2",
-    "@angular/compiler-cli": "^7.1.3",
-    "@angular/language-service": "^7.1.3",
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular/cli": "^7.3.0",
+    "@angular/compiler-cli": "^7.2.4",
+    "@angular/language-service": "^7.2.4",
     "@angularclass/hmr": "^2.1.3",
-    "@types/node": "~10.12.12",
+    "@types/node": "~10.12.21",
     "codelyzer": "^4.5.0",
-    "ts-node": "~7.0.1",
-    "tslint": "~5.11.0",
+    "ts-node": "~8.0.2",
+    "tslint": "~5.12.1",
     "tslint-angular": "^1.1.2",
-    "typescript": "3.1.3"
+    "typescript": "3.2.2"
   }
 }
