--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     "font-awesome": "^4.7.0",
     "fuse.js": "^3.3.1",
     "hammerjs": "^2.0.8",
+    "instimapweb": "^1.0.5",
     "material-design-icons": "^3.0.1",
     "moment": "^2.24.0",
     "ngx-flyout": "^1.0.0",
     "ngx-img-fallback": "^1.3.3",
     "ngx-markdown": "^7.1.3",
-    "ol": "5.3.0",
     "rxjs": "^6.4.0",
     "uri-templates": "^0.2.0",
     "web-animations-js": "^2.3.1",
