--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/node:10.15.1
-      
+
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
@@ -32,6 +32,7 @@ jobs:
           - v1-dependencies-
 
       - run: npm install
+      - run: npm prune
 
       - save_cache:
           paths:
