fix(manifest): Add android app link

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,6 +10,7 @@
     "related_applications": [
       {
         "platform": "play",
+        "url": "https://play.google.com/store/apps/details?id=app.insti",
         "id": "app.insti"
       }
     ],
