--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,7 @@
     "start_url": "feed",
     "display": "standalone",
     "theme_color": "#536dfe",
-    "background_color": "#ffffff",
+    "background_color": "#fcfcff",
     "orientation": "portrait",
     "prefer_related_applications": true,
     "related_applications": [
