--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@angular/language-service": "^7.2.5",
     "@angularclass/hmr": "^2.1.3",
     "@types/node": "~11.9.4",
+    "@types/winrt-uwp": "0.0.19",
     "codelyzer": "^4.5.0",
     "ts-node": "~8.0.2",
     "tslint": "~5.12.1",
