--- a/angular.json
+++ b/angular.json
@@ -55,6 +55,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
+            "hmrWarning": false,
             "browserTarget": "instiapp:build"
           },
           "configurations": {
