--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ cache:
   directories:
     - "node_modules"
 
-script:
+script:   
    - npm install
+   - npm prune
    - npm run lint
    - npm run build
