--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ngx-flyout": "^1.0.0",
     "ngx-img-fallback": "^1.3.4",
     "ngx-markdown": "^8.0.2",
+    "qr-scanner": "^1.1.1",
     "qrcode-generator": "^1.4.3",
     "rxjs": "^6.5.2",
     "uri-templates": "^0.2.0",
