--- a/angular.json
+++ b/angular.json
@@ -56,7 +56,8 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "hmrWarning": false,
-            "browserTarget": "instiapp:build"
+            "browserTarget": "instiapp:build",
+            "aot": true
           },
           "configurations": {
             "production": {
