--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "json2csv": "^4.5.2",
     "material-design-icons": "^3.0.1",
     "moment": "^2.24.0",
-    "ngx-flyout": "^1.0.0",
+    "ngx-flyout-ivy": "^1.1.1",
     "ngx-img-fallback": "^1.3.4",
     "ngx-markdown": "^8.0.2",
     "qr-scanner": "^1.1.1",
