--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -11,6 +11,7 @@
     "**/*.spec.ts"
   ],
   "angularCompilerOptions": {
-    "preserveWhitespaces": false
+    "preserveWhitespaces": false,
+    "enableIvy": true
   }
 }
