--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "rxjs": "^6.5.2",
     "uri-templates": "^0.2.0",
     "web-animations-js": "^2.3.1",
+    "xunk-calendar": "^3.0.2",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
