Update actions and links

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,8 @@ jobs:
           ${{ runner.os }}-build-
           ${{ runner.os }}-
 
-    - run: |
+    - name: Build
+      run: |
         npm install
         npm run build
         chmod 777 patch.sh && ./patch.sh
@@ -61,6 +62,7 @@ jobs:
           ${{ runner.os }}-build-
           ${{ runner.os }}-
 
-    - run: |
+    - name: Lint
+      run: |
         npm install
         npm run lint
