added links to SS0, CC access portal and remove CMS link
added links to SS0, CC access portal and remove CMS link

--- a/angular.json
+++ b/angular.json
@@ -100,5 +100,8 @@
     "@schematics/angular:directive": {
       "prefix": "app"
     }
+  },
+  "cli": {
+    "analytics": "27c4fbde-566e-4e6b-935f-5d8f71a99f13"
   }
 }
