--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@angular/compiler-cli": "^10.0.7",
     "@angular/language-service": "^10.0.7",
     "@angularclass/hmr": "^2.1.3",
+    "@types/jest": "^27.0.2",
     "@types/node": "~13.7.0",
     "@types/winrt-uwp": "0.0.21",
     "codelyzer": "^5.2.2",
