--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/pwa": "^0.900.1",
     "@angular/router": "^10.0.7",
     "@angular/service-worker": "^10.0.7",
+    "canvas-confetti": "^1.5.1",
     "core-js": "^3.6.4",
     "fuse.js": "^3.4.6",
     "hammerjs": "^2.0.8",
