--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "core-js": "^3.6.4",
     "fuse.js": "^3.4.6",
     "hammerjs": "^2.0.8",
-    "instimapweb2": "^2.0.0",
     "json2csv": "^4.5.4",
+    "mapmakedots": "^2.0.0",
     "material-design-icons": "^3.0.1",
     "moment": "^2.29.4",
     "ngx-flyout-ivy": "^1.1.1",
