--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "core-js": "^3.6.4",
     "fuse.js": "^3.4.6",
     "hammerjs": "^2.0.8",
-    "instimap": "^2.0.0",
+    "instimapline": "^1.2.0",
+    "instimapwev": "^1.3.9",
     "json2csv": "^4.5.4",
     "mapmakeline": "^1.2.0",
     "material-design-icons": "^3.0.1",
