--- a/package.json
+++ b/package.json
@@ -4,23 +4,23 @@
   "license": "MPL-2.0",
   "scripts": {
     "start": "ng serve --hmr --host 0.0.0.0",
-    "build": "ng build --prod",
+    "build": "ng build --configuration production",
     "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.14",
+    "@angular/animations": "^12.2.17",
     "@angular/cdk": "^11.2.0",
-    "@angular/common": "^11.2.14",
-    "@angular/compiler": "^11.2.14",
-    "@angular/core": "^11.2.14",
-    "@angular/forms": "^11.2.14",
+    "@angular/common": "^12.2.17",
+    "@angular/compiler": "^12.2.17",
+    "@angular/core": "^12.2.17",
+    "@angular/forms": "^12.2.17",
     "@angular/material": "^11.2.0",
-    "@angular/platform-browser": "^11.2.14",
-    "@angular/platform-browser-dynamic": "^11.2.14",
+    "@angular/platform-browser": "^12.2.17",
+    "@angular/platform-browser-dynamic": "^12.2.17",
     "@angular/pwa": "^0.900.1",
-    "@angular/router": "^11.2.14",
-    "@angular/service-worker": "^11.2.14",
+    "@angular/router": "^12.2.17",
+    "@angular/service-worker": "^12.2.17",
     "core-js": "^3.6.4",
     "fuse.js": "^3.4.6",
     "hammerjs": "^2.0.8",
@@ -38,13 +38,13 @@
     "uri-templates": "^0.2.0",
     "web-animations-js": "^2.3.2",
     "xunk-calendar": "^3.0.2",
-    "zone.js": "^0.10.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.19",
-    "@angular/cli": "^11.2.19",
-    "@angular/compiler-cli": "^11.2.14",
-    "@angular/language-service": "^11.2.14",
+    "@angular-devkit/build-angular": "~12.2.18",
+    "@angular/cli": "^12.2.18",
+    "@angular/compiler-cli": "^12.2.17",
+    "@angular/language-service": "^12.2.17",
     "@angularclass/hmr": "^2.1.3",
     "@types/jest": "^27.0.2",
     "@types/node": "~13.7.0",
@@ -53,6 +53,6 @@
     "ts-node": "~8.6.2",
     "tslint": "~6.1.3",
     "tslint-angular": "^3.0.2",
-    "typescript": "4.1.6"
+    "typescript": "4.3.5"
   }
 }
