--- a/angular.json
+++ b/angular.json
@@ -29,8 +29,13 @@
               },
               "src/apple-app-site-association"
             ],
-            "styles": ["src/styles.css", "src/theme.scss"],
-            "scripts": ["node_modules/marked/lib/marked.js"],
+            "styles": [
+              "src/styles.css",
+              "src/theme.scss"
+            ],
+            "scripts": [
+              "node_modules/marked/lib/marked.js"
+            ],
             "aot": false,
             "vendorChunk": true,
             "extractLicenses": false,
@@ -86,10 +91,12 @@
           }
         },
         "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
+          "builder": "@angular-eslint/builder:lint",
           "options": {
-            "tsConfig": ["src/tsconfig.app.json"],
-            "exclude": ["**/node_modules/**"]
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
           }
         }
       }
@@ -106,6 +113,7 @@
     }
   },
   "cli": {
-    "analytics": false
+    "analytics": false,
+    "defaultCollection": "@angular-eslint/schematics"
   }
 }
