--- a/package.json
+++ b/package.json
@@ -39,6 +39,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.18",
+    "@angular-eslint/builder": "12.7.0",
+    "@angular-eslint/eslint-plugin": "12.7.0",
+    "@angular-eslint/eslint-plugin-template": "12.7.0",
+    "@angular-eslint/schematics": "12.7.0",
+    "@angular-eslint/template-parser": "12.7.0",
     "@angular/cli": "^12.2.18",
     "@angular/compiler-cli": "^12.2.17",
     "@angular/language-service": "^12.2.17",
@@ -46,9 +51,10 @@
     "@types/jest": "^27.0.2",
     "@types/node": "~13.7.0",
     "@types/winrt-uwp": "0.0.21",
-    "codelyzer": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "4.28.2",
+    "@typescript-eslint/parser": "4.28.2",
+    "eslint": "^7.26.0",
     "ts-node": "~8.6.2",
-    "tslint": "~6.1.3",
     "tslint-angular": "^3.0.2",
     "typescript": "4.3.5"
   }
