--- a/angular.json
+++ b/angular.json
@@ -100,7 +100,6 @@
       }
     }
   },
-  "defaultProject": "instiapp",
   "schematics": {
     "@schematics/angular:component": {
       "prefix": "app",
@@ -112,6 +111,8 @@
   },
   "cli": {
     "analytics": false,
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
