--- a/package.json
+++ b/package.json
@@ -22,17 +22,18 @@
     "@angular/pwa": "^19.2.5",
     "@angular/router": "^19.2.4",
     "@angular/service-worker": "^19.2.4",
-    "core-js": "^3.6.4",
-    "fuse.js": "^3.4.6",
+    "core-js": "^3.41.0",
+    "fuse.js": "^7.1.0",
     "instimapline": "^1.2.0",
-    "json2csv": "^4.5.4",
+    "@json2csv/plainjs": "^7.0.6",
     "material-design-icons": "^3.0.1",
-    "moment": "^2.29.4",
-    "ngx-img-fallback": "^1.3.4",
-    "ol": "^7.3.0",
-    "qr-scanner": "^1.1.1",
+    "moment": "^2.30.1",
+    "ngx-img-fallback": "^3.0.0",
+    "ngx-markdown": "^19.1.1",
+    "ol": "^7.5.2",
+    "qr-scanner": "^1.4.2",
     "qrcode-generator": "^1.4.4",
-    "rxjs": "^6.5.4",
+    "rxjs": "^7.8.2",
     "uri-templates": "^0.2.0",
     "zone.js": "^0.15.0"
   },
@@ -46,14 +47,16 @@
     "@angular/cli": "^19.2.5",
     "@angular/compiler-cli": "^19.2.4",
     "@angular/language-service": "^19.2.4",
-    "@angularclass/hmr": "^2.1.3",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^13.7.0",
-    "@types/winrt-uwp": "^0.0.21",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "eslint": "^8.57.0",
-    "ts-node": "^8.6.2",
+    "@angularclass/hmr": "^3.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.14",
+    "@types/winrt-uwp": "^0.0.29",
+    "@typescript-eslint/eslint-plugin": "^8.28.0",
+    "@typescript-eslint/parser": "^8.28.0",
+    "@typescript-eslint/types": "^8.28.0",
+    "@typescript-eslint/utils": "^8.28.0",
+    "eslint": "^9.23.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   }
 }
